# geotrans

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/: egm84.grd
doc/: Doxyfile
examples/: testCoordinateConversionSample.cpp
include/geotrans/: geotrans.h
include/geotrans/CoordinateConversion/: CoordinateConversionService.h
include/geotrans/dtcc/: DtccApi.h
src/CoordinateConversion/: CoordinateConversionService.cpp
src/dtcc/: DatumLibrary.cpp  DatumLibrary.h  EllipsoidLibrary.cpp  EllipsoidLibrary.h  GeoidLibrary.cpp  GeoidLibrary.h  egm2008_aoi_grid_package.cpp  egm2008_aoi_grid_package.h  egm2008_full_grid_package.cpp  egm2008_full_grid_package.h  egm2008_geoid_grid.cpp  egm2008_geoid_grid.h
src/dtcc/CoordinateSystemParameters/: CoordinateSystemParameters.cpp  CoordinateSystemParameters.h  EllipsoidParameters.cpp  EllipsoidParameters.h  EquidistantCylindricalParameters.cpp  EquidistantCylindricalParameters.h  GeodeticParameters.cpp  GeodeticParameters.h  LocalCartesianParameters.cpp  LocalCartesianParameters.h  MapProjection3Parameters.cpp  MapProjection3Parameters.h  MapProjection4Parameters.cpp  MapProjection4Parameters.h  MapProjection5Parameters.cpp  MapProjection5Parameters.h  MapProjection6Parameters.cpp  MapProjection6Parameters.h  MercatorScaleFactorParameters.cpp  MercatorScaleFactorParameters.h  MercatorStandardParallelParameters.cpp  MercatorStandardParallelParameters.h  NeysParameters.cpp  NeysParameters.h  ObliqueMercatorParameters.cpp  ObliqueMercatorParameters.h  PolarStereographicScaleFactorParameters.cpp  UTMParameters.cpp  UTMParameters.h  (+3 more)
(+121 files in other folders)
